Add tenant cookie parameter, simplify spec by extracting path parameters for Car, Order and Stop Id
